--- a/AuCloudflareAPI/.project
+++ b/AuCloudflareAPI/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>AuCloudflareAPI</name>
+	<name>WebCloudflareAPIs</name>
 	<comment></comment>
 	<projects>
 	</projects>
